Memory leak in invoker_completeInvokeRequest()

XMLWordPrintable

    • b17
    • generic
    • generic

        In invoker.c in the function invoker_completeInvokeRequest(), we allocate a PacketOutputStream object called out using outStream_initReply(), but never reclaim it. We need to call outStream_destroy() before going out of scope.

              Assignee:
              Roman Kennke
              Reporter:
              Roman Kennke
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: