8284094: Memory leak in invoker_completeInvokeRequest()

Backport-of: 1dfa1eaea0c8958f4b793c0766e36607cbde5c7f